--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kr1s7ian.github.io/react-game-of-life-website/",
   "name": "vite-game-of-life-website",
   "private": true,
   "version": "0.0.0",
@@ -7,6 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist",
     "test": "vitest"
   },
   "dependencies": {
@@ -20,6 +23,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/lodash": "^4.14.191",
     "disable-scroll": "^0.6.0",
+    "gh-pages": "^5.0.0",
     "happy-dom": "^8.2.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
